--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,8 @@ authors = ["mozamimy <alice@mozami.me>"]
 edition = "2018"
 
 [dependencies]
+clap = "2.33"
+env_logger = "0.6"
+failure = "0.1"
+log = "0.4"
+trust-dns-resolver = "0.9"
